[tool.poetry]
name = "clinja"
version = "1.2.2"
description = "A jinja command line interface"
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
license = "MIT"
classifiers = [
    "Programming Language :: Python",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Topic :: Utilities",
    "Topic :: Text Processing"
]
repository = "https://github.com/loiccoyle/clinja"
readme = "README.md"
keywords = ["jinja", "cli", "templates"]

[tool.poetry.dependencies]
python = "^3.6"
myopy = "^1.0"
click = "^8.0.1"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
clinja = 'clinja.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
